[package]
name = "relayer"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = "0.32.1"
anchor-lang = "0.32.1"
anyhow = "1.0.100"
borsh = "1.5.7"
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
solana-account-decoder = "3.0.8"
solana-client = "3.0.8"
solana-sdk = "3.0.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
